# locomote

./: .gitinclude  README.md
backend/: .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml
backend/migrations/: 20260214025637_locomote.sql
backend/migrations/locomote/: down.sql  up.sql
backend/src/: main.rs  routes.rs  schema.rs  state.rs
backend/src/handlers/: card.rs  mod.rs  scanner.rs  user.rs
backend/src/models/: account.rs  card.rs  mod.rs  scanner.rs  ticket.rs  user.rs
embed/registrar/: mfrc.h  registrar.ino  web.h
frontend/: package-lock.json  package.json
frontend/src/app/: app.routes.ts  app.ts
frontend/src/app/pages/dashboard/: dashboard.component.html
frontend/src/app/services/: websocket.ts
frontend/src/app/widgets/navbar/: navbar.component.html  navbar.component.spec.ts  navbar.component.ts
locomote/: .gitignore  db.sqlite3  manage.py  requirements.txt
locomote/api/: admin.py  channels.py  models.py  routing.py  serializers.py  urls.py  views.py
locomote/api/migrations/: 0001_initial.py  0002_card_scanner_cost_userprofile_ticket_card_user.py  0003_alter_scanner_cost.py
locomote/locomote/: asgi.py  channels.py  settings.py  urls.py  wsgi.py
registrator/: card.h  main.ino  reader.h  registrator.ino  screen.h  spi_bus.h  web.h
scanner/: scanner.ino
