[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros", "tokio"] }
diesel = { version = "2.2.0", features = ["postgres"]}
dotenvy = "0.15"
tokio = { version = "1.49.0", features = ["sync", "macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.22"
