[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["json", "macros", "tokio"] }
diesel = { version = "2.2.0", features = ["postgres", "serde_json", "time"] }
dotenvy = "0.15"
serde = "1.0.228"
time = "0.3.47"
tokio = { version = "1.49.0", features = ["sync", "macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.22"
